--- a/index.html
+++ b/index.html
@@ -63,20 +63,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <!-- <a class="brand" href="#">Project name</a> -->
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li><a href="#about">À propos de nous</a></li>
-                            <li><a href="#contact">Projets</a></li>
-                            <li><a href="#contact">Impliquez-vous</a></li>
-                            <li><a href="#contact">Faites un don</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#">À propos de nous</a></li>
+                            <li><a href="#">Projets</a></li>
+                            <li><a href="#">Impliquez-vous</a></li>
+                            <li><a href="#">Faites un don</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
-                        <!-- <form class="navbar-form pull-right">
-                            <input class="span2" type="text" placeholder="Email">
-                            <input class="span2" type="password" placeholder="Password">
-                            <button type="submit" class="btn">Sign in</button>
-                        </form> -->
                     </div><!--/.nav-collapse -->
                 </div>
             </div>
@@ -88,7 +82,7 @@
             <div class="hero-unit">
                 <h1>Association Solidarit&eacute; Aquinoise <img src="http://static.wix.com/media/ef6bff_56a14dc192a0972172098fc7e32e3ad0.jpg_srz_110_79_75_22_0.50_1.20_0.00_jpg_srz" class="img-rounded"></h1>
                 <p>L'Association Solidarité Aquinoise (ASA) est un organisme à but non lucratif légalement enregistré au Québec. Elle est composée d’un groupe de personnes originaires d’Aquin et de leurs amis, qui ont décidé s’unir pour travailler à l’amélioration des conditions de vie de la population de cette région. </p>
-                <p><a class="btn btn-primary btn-large">Faire un don&raquo;</a></p>
+                <p>
                     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="Z8PHPBHCFL6YJ">
@@ -139,28 +133,6 @@
                     <p><a class="btn" href="#">En savoir plus &raquo;</a></p>
                 </div>
             </div>
-                        <!-- Example row of columns -->             <div class="row">
-            <div class="span3">                     <h2>À Propos</h2>
-            <p>Mettre en œuvre des projets en collaboration avec divers partenaires pour
-            contribuer au développement économique, social et culturel d’Aquin et ses
-            environs.</p>                     <p><a class="btn" href="#">En savoir plus
-            &raquo;</a></p>                 </div>                 <div class="span3">
-            <h2>Projets en cours</h2>                     <p>L'Association Solidarité
-            Aquinoise (ASA) a comme projet, d'ici septembre 2013, de construire une école
-            primaire en collaboration avec les leaders communautaires de l'île de Grosse
-            Caye, d'Aquin et de Montréal. La construction a officiellement commencé en
-            septembre 2012.</p>                     <p><a class="btn" href="#">En savoir
-            plus &raquo;</a></p>                </div>                 <div class="span3">
-            <h2>Faites un don</h2>                     <p>Nous prenons toutes les formes
-            de dons : matériel scolaire, matériaux de construction, expertise, publicité,
-            temps, argent, etc., tout ce qui pourrait nous permettre de transformer ce
-            rêve en réalité.</p>                     <p><a class="btn" href="#">En savoir
-            plus &raquo;</a></p>                 </div>                 <div
-            class="span3">                     <h2>Impliquez-vous</h2>
-            <p>Vous pouvez faire une différence, en donnant votre temps en participant aux
-            activités de développement à Aquin ou à nos collectes de fonds à Montréal.</p>
-            <p><a class="btn" href="#">En savoir plus &raquo;</a></p>
-            </div>             </div>
             <hr>
 
             
