--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="Z8PHPBHCFL6YJ">
-                    <input type="image"  class="btn btn-primary btn-large" border="0" name="submit" alt="Faire un don">
+                    <!-- <input type="image"  src="" class="btn btn-primary btn-large" border="0" name="submit" value="Faire un don" alt="Faire un don"> -->
+                    <input type="submit" value="Faire un don" class="btn btn-primary btn-large" border="0">
                     <img alt="" border="0" src="https://www.paypalobjects.com/fr_CA/i/scr/pixel.gif" width="1" height="1">
                     </form>
                 </p>
