--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!-- Main hero unit for a primary marketing message or call to action -->
             <div class="hero-unit">
-                <h1>Association Solidarit&eacute; Aquinoise <img src="http://static.wix.com/media/ef6bff_56a14dc192a0972172098fc7e32e3ad0.jpg_srz_110_79_75_22_0.50_1.20_0.00_jpg_srz" class="img-rounded"></h1>
+                <h1>Association Solidarit&eacute; Aquinoise <img src="img/ASA8.png" class="img-rounded"></h1>
                 <p>L'Association Solidarité Aquinoise (ASA) est un organisme à but non lucratif légalement enregistré au Québec. Elle est composée d’un groupe de personnes originaires d’Aquin et de leurs amis, qui ont décidé s’unir pour travailler à l’amélioration des conditions de vie de la population de cette région. </p>
                 <p>
                     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
