ajout index a-propos, modif menu pour dropdown

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li><a href="#">À propos de nous</a></li>
+                            <li><a href="a-propos">À propos de nous</a></li>
                             <li><a href="#">Projets</a></li>
                             <li><a href="#">Impliquez-vous</a></li>
                             <li><a href="#">Faites un don</a></li>
