--- a/projets/index.html
+++ b/projets/index.html
@@ -21,32 +21,6 @@
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-
-        <style type="text/css">
-
-          /* Sticky footer styles
-          -------------------------------------------------- */
-          /* Set the fixed height of the footer here */
-          #push,
-          #footer {
-            height: 150px;
-          }
-          #footer {
-            background-color: black;
-            color: white;
-          }
-
-          /* Lastly, apply responsive CSS fixes as necessary */
-          @media (max-width: 767px) {
-            #footer {
-              margin-left: -20px;
-              margin-right: -20px;
-              padding-left: 20px;
-              padding-right: 20px;
-            }
-          }
-        </style>
-
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -64,23 +38,39 @@
                         <span class="icon-bar"></span>
                     </a>
                     <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li><a href="a-propos">À propos de nous</a></li>
-                            <li><a href="projets">Projets</a></li>
-                            <li><a href="#">Impliquez-vous</a></li>
-                            <li><a href="#">Faites un don</a></li>
-                            <li><a href="#">Contact</a></li>
+                        <ul class="nav" role="menu" aria-labelledby="dropdownMenu">
+                            <li class="active"><a href="../">Accueil</a></li>
+                            <li class="dropdown">
+                                <a id="a-propos" class="dropdown-toggle" href="#" data-toggle="dropdown" role="button">
+                                    À propos de nous
+                                    <b class="caret"></b>
+                                </a>
+                                <ul id="menu1" class="dropdown-menu" aria-labelledby="a-propos" role="menu">
+                                    <li role="presentation">
+                                        <a href="#" tabindex="-1" role="menuitem">En bref</a>
+                                    </li>
+                                    <li role="presentation">
+                                        <a href="#" tabindex="-1" role="menuitem">Les branches</a>
+                                    </li>
+                                    <li role="presentation">
+                                        <a href="#" tabindex="-1" role="menuitem">Nos réalisations</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a href="./projets">Projets</a></li>
+                            <li><a href="#contact">Impliquez-vous</a></li>
+                            <li><a href="#contact">Faites un don</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
-                    </div><!--/.nav-collapse -->
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="container">
 
-            <!-- Main hero unit for a primary marketing message or call to action -->
             <div class="hero-unit">
-                <h1>Association Solidarit&eacute; Aquinoise <img src="img/ASA8.png" width="110" height="79" class="img-rounded"></h1>
+                <h1>Association Solidarit&eacute; Aquinoise <img src="../img/ASA8.png" width="110" height="79" class="img-rounded"></h1>
                 <p>L'Association Solidarité Aquinoise (ASA) est un organisme à but non lucratif légalement enregistré au Québec. Elle est composée d’un groupe de personnes originaires d’Aquin et de leurs amis, qui ont décidé s’unir pour travailler à l’amélioration des conditions de vie de la population de cette région. </p>
                 <p>
                     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -93,47 +83,46 @@
                 </p>
             </div>
 
-            <!-- Le carousel d'images -->
-
-                <div id="myCarousel" class="carousel slide">
-                <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
-                <!-- Carousel items -->
-                <div class="carousel-inner">
-                <div class="active item"><img src="http://static.wix.com/media/ef6bff_8e03b2eecb3b083f0974a5dc88584d4e.jpg"></div>
-                <div class="item"><img src="http://static.wix.com/media/ef6bff_8e03b2eecb3b083f0974a5dc88584d4e.jpg"></div>
-                <div class="item"><img src="http://static.wix.com/media/ef6bff_8e03b2eecb3b083f0974a5dc88584d4e.jpg"></div>
-                </div>
-                <!-- Carousel nav -->
-                <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-                <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-            </div>
             <!-- Example row of columns -->
             <div class="row">
-                <div class="span3">
-                    <h2>À Propos</h2>
-                    <p>Mettre en œuvre des projets en collaboration avec divers partenaires pour contribuer au développement économique, social et culturel d’Aquin et ses environs.</p>
-                    <p><a class="btn" href="#">En savoir plus &raquo;</a></p>
+                <div class="span1">
+                    <img src="./img/projets-ecole-grosse-caye-1.jpg" class="img-circle">
+                </div> 
+                <div class="span11">
+                    <h4>École de Grosse Caye</h4>
+                    <p>Devant servir à l’instruction des enfants de Grosse-Caye. Elle peut aussi être utilisée en après-midi pour  des cours professionnels ou artisanaux. Cette construction est destinée aussi à servir d’abri pour les habitants en cas de cyclone et de clinique médicale. Le coût du projet est de $150.000 US</p>
                 </div>
-                <div class="span3">
-                    <h2>Projets en cours</h2>
-                    <p>L'Association Solidarité Aquinoise (ASA) a comme projet, d'ici septembre 2013, de construire une école primaire en collaboration avec les leaders communautaires de l'île de Grosse Caye, d'Aquin et de Montréal. La construction a officiellement commencé en septembre 2012.</p>
-                    <p><a class="btn" href="#">En savoir plus &raquo;</a></p>
+                <div class="span1">
+                    <img src="./img/clinique-mobile-1.jpg" class="img-circle">
+                </div>
+                <div class="span11">
+                    <h4>Clinique Mobile</h4>
+                    <p>Comme en 2009 et en 2012, notre comité organise des cliniques ambulatoires dans certaines localités d’Aquin où les soins de santé sont difficilement accessibles dans la période de Pâque 2013.</p>
                </div>
-                <div class="span3">
-                    <h2>Faites un don</h2>
-                    <p>Nous prenons toutes les formes de dons : matériel scolaire, matériaux de construction, expertise, publicité, temps, argent, etc., tout ce qui pourrait nous permettre de transformer ce rêve en réalité.</p>
-                    <p><a class="btn" href="#">En savoir plus &raquo;</a></p>
+               <div class="span1">
+                    <img src="./img/projets-ecole-grosse-caye-3.jpg" class="img-circle">
                 </div>
-                <div class="span3">
-                    <h2>Impliquez-vous</h2>
-                    <p>Vous pouvez faire une différence, en donnant votre temps en participant aux activités de développement à Aquin ou à nos collectes de fonds à Montréal.</p>
-                    <p><a class="btn" href="#">En savoir plus &raquo;</a></p>
+                <div class="span11">
+                    <h4>Notre expérience</h4>
+                    <p> <a href="#" target="_blank">Ce montage</a> représente la clinique mobile de 2012</p>
+                    <p>Trois localités d'Aquin ont pu bénéficier de nos services : Aquin, Zanglais et l'île de Grosse Caye</p>
+                </div>
+                <div class="span1">
+                    <img src="./img/biblio-1.jpg" class="img-circle">
+                </div>
+                <div class="span11">
+                    <h4>Bibliothèque</h4>
+                    <p>la Bibliothèque de la Ville d’Aquin est conçue pour recevoir environ 30000 livres et documents écrits.  Elle contiendra également un cyber-café, des salles de lecture, une salle polyvalente, une salle audio-visuelle, une bibliothèque pour le jeune public, des bureaux administratifs, un espace de stockage, un atelier de préparation et de réparation des ouvrages.</p>
+                </div>
+                <div class="span1">
+                    <img src="./img/projets-ecole-grosse-caye-4.jpg" class="img-circle">
+                </div>
+                <div class="span11">
+                    <h4>Ce que nous offrons</h4>
+                    <p>Nous offrons notre support à l'ADF pour concrétiser leur projet de bibliothèque qui bénéficiera au rayonnement culturel d'Aquin dans toute sa commune.</p>
                 </div>
             </div>
+
             <hr>
 
             
