--- a/impliquez-vous/index.html
+++ b/impliquez-vous/index.html
@@ -90,7 +90,7 @@
                     <h1>Participez</h1>
                     <ul class="nav nav-tabs" id="myTab">
                         <li class="active"><a href="#Benevolat">Benevolat</a></li>
-                        <li><a href="#Organisez">Benevolat</a></li>
+                        <li><a href="#Organisez">Organisez</a></li>
                         <li><a href="#Contribuez">Contribuez</a></li>
                     </ul>
                      
