modif menu actif

--- a/projets/index.html
+++ b/projets/index.html
@@ -39,7 +39,7 @@
                     </a>
                     <div class="nav-collapse collapse">
                         <ul class="nav" role="menu" aria-labelledby="dropdownMenu">
-                            <li class="active"><a href="../">Accueil</a></li>
+                            <li><a href="../">Accueil</a></li>
                             <li class="dropdown">
                                 <a id="a-propos" class="dropdown-toggle" href="#" data-toggle="dropdown" role="button">
                                     À propos de nous
@@ -57,7 +57,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="./projets">Projets</a></li>
+                            <li class="active"><a href="./projets">Projets</a></li>
                             <li><a href="#contact">Impliquez-vous</a></li>
                             <li><a href="#contact">Faites un don</a></li>
                             <li><a href="#contact">Contact</a></li>
