--- a/faire-un-don/index.html
+++ b/faire-un-don/index.html
@@ -57,10 +57,10 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="active"><a href="#">Projets</a></li>
+                            <li><a href="./../projets">Projets</a></li>
                             <li><a href="./../impliquez-vous">Impliquez-vous</a></li>
-                            <li><a href="#contact">Faites un don</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li class="active"><a href="#">Faites un don</a></li>
+                            <li><a href="./../contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -87,6 +87,7 @@
             <div class="row">
                 <h1 style="text-align:center;">Faite un don</h1>
                 <h4 style="text-align:center;">Nos besoins</h4>
+                <p>&nbsp;</p>
                 <div class="span10">
                     <p>Le coût de la construction de l’établissement est évalué à $185 000 US. Nous avons des fonds disponibles pour financer le projet, mais ils sont malheureusement insuffisants.  Sans le  soutien de la communauté nous n’arriverons pas à mener à terme le projet. C’est pourquoi nous sollicitons votre aide.</p>
 
